# poc-rust

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/libs/lib-compound/: Cargo.toml
crates/libs/lib-compound/src/: collections.rs  lib.rs
crates/libs/lib-exceptions/: Cargo.toml
crates/libs/lib-exceptions/src/: lib.rs
crates/libs/lib-flow/: Cargo.toml
crates/libs/lib-flow/src/: lib.rs
crates/libs/lib-functions/: Cargo.toml
crates/libs/lib-functions/src/: lib.rs
crates/libs/lib-ownership/: Cargo.toml
crates/libs/lib-ownership/src/: lib.rs
crates/libs/lib-structures/: Cargo.toml
crates/libs/lib-structures/src/: lib.rs  lifetimes.rs  structs.rs  traits.rs
crates/libs/lib-testing/: Cargo.toml
crates/libs/lib-testing/src/: lib.rs
crates/libs/lib-typing/: Cargo.toml
crates/libs/lib-typing/src/: enums.rs  generics.rs  lib.rs  matching.rs
crates/libs/lib-variables/: Cargo.toml
crates/libs/lib-variables/src/: lib.rs
crates/mainner/: Cargo.toml
crates/mainner/src/: main.rs
