[workspace]
resolver = "2"
members = [
  "crates/mainner",
  "crates/libs/lib-functions",
  "crates/libs/lib-variables",
  "crates/libs/lib-ownership",
  "crates/libs/lib-structures",
  "crates/libs/lib-exceptions",
  "crates/libs/lib-compound",
  "crates/libs/lib-typing",
  "crates/libs/lib-testing",
]
