[package]
name = "mainner"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-variables = { path = "../libs/lib-variables" }
lib-functions = { path = "../libs/lib-functions" }
lib-ownership = { path = "../libs/lib-ownership"}
lib-structures = { path = "../libs/lib-structures"}
lib-compound = { path = "../libs/lib-compound"}
lib-typing = { path = "../libs/lib-typing"}